# eYSIP-24_Field_Exploration_ROS_Vehicles

./: README.md  map.data  map.pgm  map.yaml  teleop_pub.py  teleop_sub.py
Arduino_code/: teleop_test.ino
ackermann_rc_nav2/: package.xml
ackermann_rc_nav2/config/: ekf.yaml  nav2_params.yaml
ackermann_rc_nav2/launch/: ackermann_rccar_bringup_launch.py  localization_launch.py  navigation_launch.py
ackermann_rc_nav2/maps/: map_vicon.data  map_vicon.pgm  map_vicon.yaml
ackermann_rc_nav2/params/: nav2_params.yaml
custom_msgs/: CMakeLists.txt
custom_msgs/msg/: Goal.msg
dead_reckoning_ws/install/: local_setup.sh  setup.sh
dead_reckoning_ws/log/: latest_build  latest_list
imu_pkg/: setup.py
imu_pkg/imu_pkg/: constants.py  imu_node.py  madwigck_filter.py
imu_pkg/launch/: imu_rviz_robot.launch.py
localization/: package.xml  setup.py
localization/localization/: Vicon_odometry.py  imu_odometry.py  vicon_data_compare.py
my_imu_pkg/: CMakeLists.txt  package.xml
my_imu_pkg/config/: rviz_config.rviz
my_imu_pkg/launch/: imu_launch.py  imu_with_rviz_launch.py
my_imu_pkg/scripts/: imu_fusion_node.py  imu_tf_node.py
my_imu_pkg/src/: imu_node.py  read_all_data.py
navigation/: package.xml  setup.py
navigation/navigation/: GoalNode.py  final_goal.py  pure_pursuit.py
rcar_viz/: CMakeLists.txt  package.xml
rcar_viz/launch/: display.launch.py
rcar_viz/rviz/: RCcar_dispay.rviz  display.rviz  lidar_display.rviz
ros2_imu_tools/: .gitlab-ci.yml
teleop_bot/: setup.cfg  setup.py
teleop_bot/teleop_bot/: pub.py  sub.py  whycon_pub.py
(+84 files in other folders)
